--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -7,9 +7,7 @@ header {
     align-items: center;
 }
 
-.logo {
-    margin-left: 20px;
-}
+.logo {margin-left: 20px;}
 
 .logo::before {
     content: url('../images/logo.png');
